--- a/custom_components/stream_assist/manifest.json
+++ b/custom_components/stream_assist/manifest.json
@@ -1,6 +1,6 @@
 {
-  "domain": "stream_assist",
-  "name": "Stream Assist",
+  "domain": "stream_assistcc",
+  "name": "Stream AssistCC",
   "codeowners": [
     "@AlexxIT"
   ],
