--- a/custom_components/stream_assistcc/manifest.json
+++ b/custom_components/stream_assistcc/manifest.json
@@ -1,6 +1,6 @@
 {
-  "domain": "stream_assistcc",
-  "name": "Stream AssistCC",
+  "domain": "stream_assist_cc",
+  "name": "Stream Assist CC",
   "codeowners": [
     "@AlexxIT"
   ],
@@ -9,9 +9,8 @@
     "stream",
     "assist_pipeline"
   ],
-  "documentation": "https://github.com/AlexxIT/StreamAssist",
+  "documentation": "https://github.com/vash2695/StreamAssistCC",
   "iot_class": "calculated",
-  "issue_tracker": "https://github.com/AlexxIT/StreamAssist/issues",
   "requirements": [],
-  "version": "v2.1.0"
+  "version": "v0.0.1"
 }
