--- a/custom_components/stream_assist_cc/manifest.json
+++ b/custom_components/stream_assist_cc/manifest.json
@@ -2,7 +2,8 @@
   "domain": "stream_assist_cc",
   "name": "Stream Assist CC",
   "codeowners": [
-    "@AlexxIT"
+    "@AlexxIT",
+    "@vash2695"
   ],
   "config_flow": true,
   "dependencies": [
